# spectre

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  spectre_design_document.md
.github/workflows/: lint.yml  tests.yml  type-check.yml
configs/: config.yaml
configs/dataset/: local.yaml
configs/logging/: default.yaml
configs/runtime/: local.yaml
dataset/test/benign/: cic_vpn__email2a.pcap  cic_vpn__vpn_email2a.pcap  cic_vpn__vpn_facebook_audio2.pcap  cic_vpn__vpn_ftps_A.pcap  cic_vpn__vpn_hangouts_audio1.pcap  cic_vpn__vpn_skype_files1a.pcap  cic_vpn__vpn_spotify_A.pcap  ctu_normal__CTU-Normal-26__2017-04-28_normal.pcap  ctu_normal__CTU-Normal-9__2016-09-13_win16.pcap  iot23_benign__CTU-Honeypot-Capture-7-4__2019-07-05-16-41-14-192.168.1.158.pcap  iot23_benign__CTU-Honeypot-Capture-7-6__2019-07-07-16-41-19-192.168.1.158.pcap  wireshark_0007__new_rfp.pcap  wireshark_0008__ntlm_rpc.pcapng  wireshark_0016__wcf_nettcpbinding.pcapng  wireshark_0021__ssh_curve25519-aes128-cbc_opensshS.pcapng  wireshark_0022__create_two_tasks_then_enum_RPC_C_AUTHN_LEVEL_CONNECT_NTLMv2.pcapng  wireshark_0026__protobuf_udp_addressbook_with_image.pcapng  wireshark_0030__ssh_curve25519-aes256-cbc_opensshS.pcapng  wireshark_0031__rarp_req_reply.pcapng  wireshark_0041__grpc_person_search_json_with_image.pcapng  wireshark_0054__200722_win_scale_examples_anon.pcapng  wireshark_0069__BitTorrent.Transfer1.cap  wireshark_0073__DIS_EntityState_1.pcapng  wireshark_0086__FTPv6-1.cap  wireshark_0090__KasperskyPackets.CAP  zenodo_k8s__data__argocd-20240921002513__argocd_4.10.9_1.pcap  zenodo_k8s__data__argocd-20240921002513__argocd_4.10.9_10.pcap  zenodo_k8s__data__argocd-20240921002513__argocd_4.10.9_2.pcap  zenodo_k8s__data__argocd-20240921002513__argocd_4.9.8_11.pcap  zenodo_k8s__data__argocd-20240921002513__argocd_4.9.8_2.pcap  zenodo_k8s__data__argocd-20240921002513__argocd_4.9.8_3.pcap  (+109 more)
docs/: architecture.md  dataset_contract.md  development.md  environment.md  m0_scope.md
docs/adr/: 0001-use-existing-conda-environment.md  0002-src-layout-and-clean-architecture.md  0003-frozen-dataclasses-for-domain-objects.md  0004-hydra-plus-pydantic-for-configuration.md  0005-defer-mlflow-dvc-and-ml-dependencies.md  0006-plugin-registry-from-m0.md
environment/: environment.yml  pip-freeze.txt  system_info.json
src/spectre/: README.md  __init__.py  constants.py  typing.py  version.py
tests/integration/: test_cli_smoke.py
tests/unit/: test_config_loader.py  test_config_schemas.py  test_constants.py  test_core_interfaces.py  test_dataset_hashes.py  test_dataset_manifest.py  test_dataset_validation.py  test_domain_dataset.py  test_domain_metrics.py  test_domain_prediction.py  test_domain_runtime.py  test_exceptions.py  test_io.py  test_logging_setup.py  test_plugin_registry.py  test_reproducibility.py  test_typing.py  test_version.py
tools/: env_info.py  qa.py  write_environment_metadata.py
(+1774 files in other folders)
