[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spectre-research"
version = "0.1.0.dev0"
description = "Spectre: a modular robustness evaluation framework for LLM-based malware traffic classifiers."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "Proprietary research prototype; license pending." }
authors = [
    { name = "Spectre Research Team" }
]
keywords = [
    "network-security",
    "malware-traffic-classification",
    "adversarial-ml",
    "llm-security",
    "robustness-evaluation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "hydra-core>=1.3,<1.4",
    "omegaconf>=2.3,<2.4",
    "pydantic>=2.7,<3.0",
    "rich>=13.7,<14.0",
    "structlog>=24.1,<25.0",
    "typer>=0.12,<1.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4,<25.0",
    "mypy>=1.10,<2.0",
    "pre-commit>=3.7,<4.0",
    "pytest>=8.2,<9.0",
    "pytest-cov>=5.0,<6.0",
    "ruff>=0.6,<1.0",
]

[project.scripts]
spectre = "spectre.cli.main:app"



[tool.setuptools.packages.find]
where = ["src"]
include = ["spectre*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests", "tools"]

[tool.ruff.lint]
select = [
    "A",
    "ANN",
    "ARG",
    "B",
    "C4",
    "D",
    "E",
    "EM",
    "F",
    "FA",
    "FBT",
    "I",
    "ISC",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "RET",
    "RUF",
    "S",
    "SIM",
    "T20",
    "TRY",
    "UP",
    "W",
]
ignore = [
    "D203",
    "D213",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "D100", "D103", "PLR2004"]
"tools/**/*.py" = ["T201"]

[tool.mypy]
python_version = "3.11"
files = ["src", "tests", "tools"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
minversion = "8.2"
testpaths = ["tests"]
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=spectre",
    "--cov-report=term-missing",
    "--cov-fail-under=90",
]
markers = [
    "integration: marks integration tests",
]

[tool.coverage.run]
branch = true
source = ["spectre"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
